--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "intership-template",
   "version": "1.0.0",
   "description": "```     https://hapi.dev/family/joi/ ```",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "build": "npx tsc",
     "start": "nodemon src/server/index.js",
-    "lint:fix": "eslint ./src/components/User/models/refreshModel.js --fix"
+    "startts": "nodemon",
+    "lint:fix": "eslint ./src/components/User/interfaces/NewUser.interface.ts --fix",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/server.js\"",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -32,9 +36,21 @@
     "mongoose": "6.0.14"
   },
   "devDependencies": {
-    "eslint": "8.3.0",
+    "@types/bcryptjs": "2.4.2",
+    "@types/compression": "1.7.2",
+    "@types/cookie-parser": "1.4.3",
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.13",
+    "@types/http-server": "0.12.1",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/node": "18.6.4",
+    "@typescript-eslint/eslint-plugin": "5.32.0",
+    "@typescript-eslint/parser": "5.32.0",
+    "concurrently": "7.3.0",
+    "eslint": "8.21.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.25.3",
-    "nodemon": "2.0.18"
+    "eslint-plugin-import": "2.26.0",
+    "nodemon": "2.0.18",
+    "typescript": "4.7.4"
   }
 }
